# NitroCPP

./: CMakeLists.txt
include/nitro/: macros.h  value.h
src/: nitro.cpp
src/AST/: ASTNode.cpp  ASTNode.hpp  ASTNodeBinary.hpp  ASTNodeConditional.hpp  ASTNodeConstant.hpp  ASTNodeFunctionDefinition.hpp  ASTNodeFunctionReturn.hpp  ASTNodeNil.hpp  ASTNodeStatementSet.hpp  ASTNodeUnary.hpp  ASTNodeVariableDeclaration.hpp  ASTNodeVariableInvokation.hpp  ASTPrettyPrinter.cpp  ASTPrettyPrinter.hpp  ASTVisitor.hpp
src/Lexer/: Lexer.cpp  Lexer.hpp  lexer.hpp~
src/Parser/: Parser.cpp  Parser.hpp
src/Runtime/Value/: value.cpp
src/global/: defs.hpp
